  more reusable. (Marcelo Vanzin)

- NO_ESCAPE is now deprecated and ignored by the parsing engine. ESCAPE is now
  a valid attribute for SPAN and SPAN_REGEXP rules. All mode files updated to
  follow the new escape rule semantics. (Marcelo Vanzin)

- Use MARKUP for tags in HTML mode and delegate css "style" attributes to the
  CSS mode. (Daniel Hahler - Patch # 1783634)

}}}
{{{ API Changes

- The bsh package was refactored to org.gjt.sp.jedit.bsh, all plugins that uses
  classes from this package will have to be repaired. This was necessary to fix
  bug (893349) (Matthieu Casanova)

- A new GUIUtilities.listConfirm() method that returns also the selected items
  in the list (Matthieu Casanova)

- JEditBuffer.undo() and JEditBuffer.redo() now takes a
  org.gjt.sp.jedit.textarea.TextArea as parameter (Matthieu Casanova)

- Cleaned up org.gjt.sp.jedit.buffer.KillRing to improve independence
  from jEdit's core. This narrowed a few parts of API. This can break
  some existing macros or plugins.
    - It no longer has any protected data field. Use public or protected
      methods including a new protected method reset() instead.
    - KillRing.KillRingHandler was removed because it should be a part
      of the core which does save the killring into a XML file. It
      became a private part of the core.
  (Kazutoshi Satoda)

- Dropped some concrete classes from API. They are just implementation
  details of the core. Use more abstract base classes or interfaces
  instead.
    - org.gjt.sp.jedit.bufferio.JEditKillRing
      -> org.gjt.sp.jedit.buffer.KillRing
    - org.gjt.sp.jedit.JEditMode
      -> org.gjt.sp.jedit.Mode
    - org.gjt.sp.jedit.JEditRegisterSaver
      -> org.gjt.sp.jedit.RegisterSaver
    - org.gjt.sp.jedit.JEditRegistersListener
      -> org.gjt.sp.jedit.RegistersListener
  (Kazutoshi Satoda)

- Added a new method ModeProvider.getModeForFile() that will try to find an
  appropriate mode for a filename (Matthieu Casanova)
