@@ -2,11 +2,24 @@
 
 <!DOCTYPE MODE SYSTEM "xmode.dtd">
 
-<!-- SML MODE by Ingmar Stein -->
+<!-- SML MODE 1.0 by Lucas Dixon, based on Ingmar Stein's ml mode -->
 <MODE>
 	<PROPS>
 		<PROPERTY NAME="commentStart" VALUE="(*"/>
 		<PROPERTY NAME="commentEnd" VALUE="*)"/>
+    <PROPERTY NAME="wordBreakChars" VALUE=",+-=&lt;&gt;/?^&amp;*\\/(){}" />
+    <PROPERTY NAME="doubleBracketIndent" VALUE="false" />
+    <PROPERTY NAME="lineUpClosingBracket" VALUE="true" />
+<!--    <PROPERTY NAME="unalignedOpenBrackets" VALUE="([{" />
+    <PROPERTY NAME="unalignedCloseBrackets" VALUE=")]}" /> -->
+    <PROPERTY NAME="indentOpenBrackets" VALUE="([{" />
+    <PROPERTY NAME="indentCloseBrackets" VALUE=")]}" />
+    <PROPERTY NAME="indentNextLines"
+      VALUE="(^|.*\s+)(let|sig|struct|local)(\W+.*|)$" />
+    <PROPERTY NAME="unindentNextLines"
+      VALUE="(^|.*\s+)(end)(\W+.*|)$" />
+    <PROPERTY NAME="unindentThisLine"
+      VALUE="(^|\s+)(local|val|fun|end|in|open)(\W+.*|)$" />
 	</PROPS>
 
 	<RULES IGNORE_CASE="FALSE" HIGHLIGHT_DIGITS="TRUE">
@@ -34,44 +47,51 @@
 		<SEQ TYPE="OPERATOR">/</SEQ>
 		<SEQ TYPE="OPERATOR">*</SEQ>
 
-		<!-- infix precedence 6 -->
+		<!-- reserved & operator characters -->
 		<SEQ TYPE="OPERATOR">+</SEQ>
 		<SEQ TYPE="OPERATOR">-</SEQ>
 		<SEQ TYPE="OPERATOR">^</SEQ>
-
-		<!-- infix precedence 5 -->
-		<SEQ TYPE="OPERATOR">::</SEQ>
 		<SEQ TYPE="OPERATOR">@</SEQ>
-
-		<!-- infix precedence 4 -->
 		<SEQ TYPE="OPERATOR">=</SEQ>
-		<SEQ TYPE="OPERATOR">&lt;&gt;</SEQ>
-		<SEQ TYPE="OPERATOR">&lt;=</SEQ>
 		<SEQ TYPE="OPERATOR">&lt;</SEQ>
-		<SEQ TYPE="OPERATOR">&gt;=</SEQ>
 		<SEQ TYPE="OPERATOR">&gt;</SEQ>
-
-		<!-- infix precedence 3 -->
-		<SEQ TYPE="OPERATOR">:=</SEQ>
-
-		<!-- reserved words -->
-		<!-- <SEQ TYPE="NULL">(</SEQ>
-		<SEQ TYPE="NULL">)</SEQ>
-		<SEQ TYPE="NULL">[</SEQ>
-		<SEQ TYPE="NULL">]</SEQ>
-		<SEQ TYPE="NULL">{</SEQ>
-		<SEQ TYPE="NULL">}</SEQ>
-		<SEQ TYPE="NULL">,</SEQ>
-		<SEQ TYPE="NULL">:&gt;</SEQ>
-		<SEQ TYPE="NULL">:</SEQ>
-		<SEQ TYPE="NULL">;</SEQ>
-		<SEQ TYPE="NULL">...</SEQ>
-		<SEQ TYPE="NULL">_</SEQ>
-		<SEQ TYPE="NULL">|</SEQ>
-		<SEQ TYPE="NULL">=&gt;</SEQ>
-		<SEQ TYPE="NULL">-&gt;</SEQ>
-		<SEQ TYPE="NULL">#</SEQ> -->
-
+		<SEQ TYPE="OPERATOR">(</SEQ>
+		<SEQ TYPE="OPERATOR">)</SEQ>
+		<SEQ TYPE="OPERATOR">[</SEQ>
+		<SEQ TYPE="OPERATOR">]</SEQ>
+		<SEQ TYPE="OPERATOR">{</SEQ>
+		<SEQ TYPE="OPERATOR">}</SEQ>
+		<SEQ TYPE="OPERATOR">,</SEQ>
+		<SEQ TYPE="OPERATOR">:</SEQ>
+		<SEQ TYPE="OPERATOR">;</SEQ>
+		<SEQ TYPE="OPERATOR">|</SEQ>
+		<SEQ TYPE="OPERATOR">#</SEQ>
+    
+    
+    <MARK_FOLLOWING TYPE="FUNCTION" 
+    MATCH_TYPE="KEYWORD1">fun </MARK_FOLLOWING>
+    <MARK_FOLLOWING TYPE="FUNCTION" 
+    MATCH_TYPE="KEYWORD1">val </MARK_FOLLOWING>
+    <MARK_FOLLOWING TYPE="FUNCTION" 
+    MATCH_TYPE="KEYWORD1">exception </MARK_FOLLOWING>
+    
+    <MARK_FOLLOWING TYPE="FUNCTION" 
+    MATCH_TYPE="KEYWORD1">type </MARK_FOLLOWING>
+    <MARK_FOLLOWING TYPE="FUNCTION" 
+    MATCH_TYPE="KEYWORD1">abstype </MARK_FOLLOWING>
+     <MARK_FOLLOWING TYPE="FUNCTION" 
+    MATCH_TYPE="KEYWORD1">eqtype </MARK_FOLLOWING>
+    <MARK_FOLLOWING TYPE="FUNCTION" 
+    MATCH_TYPE="KEYWORD1">datatype </MARK_FOLLOWING>
+    
+    <MARK_FOLLOWING TYPE="LITERAL3" 
+    MATCH_TYPE="KEYWORD1">functor </MARK_FOLLOWING>
+    <MARK_FOLLOWING TYPE="LITERAL3" 
+    MATCH_TYPE="KEYWORD1">structure </MARK_FOLLOWING>
+    <MARK_FOLLOWING TYPE="LITERAL3" 
+    MATCH_TYPE="KEYWORD1">signature </MARK_FOLLOWING>
+    
+    <!-- reserved words -->
 		<KEYWORDS>
 			<!-- built-in operators -->
 
@@ -85,46 +105,56 @@
 			<!-- infix precedence 0 -->
 			<OPERATOR>before</OPERATOR>
 
-			<!-- reserved words -->
+			<!-- type def -->
 			<KEYWORD1>abstype</KEYWORD1>
+      <KEYWORD1>datatype</KEYWORD1>
+      <KEYWORD1>eqtype</KEYWORD1>
+      <KEYWORD1>type</KEYWORD1>
+      
+      <!-- value definitions -->
+      <KEYWORD1>exception</KEYWORD1>
+      <KEYWORD1>fun</KEYWORD1>
+      <KEYWORD1>val</KEYWORD1>
+      <KEYWORD1>fn</KEYWORD1>
+        
+      <!-- generic definitional -->
 			<KEYWORD1>and</KEYWORD1>
-			<KEYWORD1>andalso</KEYWORD1>
-			<KEYWORD1>as</KEYWORD1>
-			<KEYWORD1>case</KEYWORD1>
-			<KEYWORD1>do</KEYWORD1>
-			<KEYWORD1>datatype</KEYWORD1>
-			<KEYWORD1>else</KEYWORD1>
-			<KEYWORD1>end</KEYWORD1>
-			<KEYWORD1>eqtype</KEYWORD1>
-			<KEYWORD1>exception</KEYWORD1>
-			<KEYWORD1>fn</KEYWORD1>
-			<KEYWORD1>fun</KEYWORD1>
-			<KEYWORD1>functor</KEYWORD1>
-			<KEYWORD1>handle</KEYWORD1>
-			<KEYWORD1>if</KEYWORD1>
+      <KEYWORD1>end</KEYWORD1>
 			<KEYWORD1>in</KEYWORD1>
-			<KEYWORD1>include</KEYWORD1>
-			<KEYWORD1>infix</KEYWORD1>
+      <KEYWORD1>infix</KEYWORD1>
 			<KEYWORD1>infixr</KEYWORD1>
-			<KEYWORD1>let</KEYWORD1>
-			<KEYWORD1>local</KEYWORD1>
-			<KEYWORD1>nonfix</KEYWORD1>
-			<KEYWORD1>of</KEYWORD1>
-			<KEYWORD1>op</KEYWORD1>
-			<KEYWORD1>open</KEYWORD1>
-			<KEYWORD1>orelse</KEYWORD1>
-			<KEYWORD1>raise</KEYWORD1>
-			<KEYWORD1>rec</KEYWORD1>
-			<KEYWORD1>sharing</KEYWORD1>
-			<KEYWORD1>sig</KEYWORD1>
+      <KEYWORD1>let</KEYWORD1>
+      <KEYWORD1>local</KEYWORD1>
+      <KEYWORD1>as</KEYWORD1>
+      <KEYWORD1>of</KEYWORD1>
+      <KEYWORD1>op</KEYWORD1>
+      
+      <!-- module level -->
+      <KEYWORD1>functor</KEYWORD1>
+      <KEYWORD1>include</KEYWORD1>
+      <KEYWORD1>open</KEYWORD1>
+      <KEYWORD1>sharing</KEYWORD1>
+      <KEYWORD1>sig</KEYWORD1>
 			<KEYWORD1>signature</KEYWORD1>
 			<KEYWORD1>struct</KEYWORD1>
 			<KEYWORD1>structure</KEYWORD1>
-			<KEYWORD1>then</KEYWORD1>
-			<KEYWORD1>type</KEYWORD1>
-			<KEYWORD1>val</KEYWORD1>
-			<KEYWORD1>where</KEYWORD1>
-			<KEYWORD1>with</KEYWORD1>
+      <KEYWORD1>where</KEYWORD1>
+      <KEYWORD1>with</KEYWORD1>
+      
+      <!-- logic/control flow -->
+      <KEYWORD1>andalso</KEYWORD1>
+      <KEYWORD1>orelse</KEYWORD1>
+			<KEYWORD1>else</KEYWORD1>
+      <KEYWORD1>if</KEYWORD1>
+      <KEYWORD1>case</KEYWORD1>  
+      <KEYWORD1>handle</KEYWORD1>
+      <KEYWORD1>raise</KEYWORD1>
+      <KEYWORD1>then</KEYWORD1>
+			
+      <!--- other -->
+			<KEYWORD1>do</KEYWORD1>
+			<KEYWORD1>nonfix</KEYWORD1>
+			<KEYWORD1>rec</KEYWORD1>
 			<KEYWORD1>withtype</KEYWORD1>
 			<KEYWORD1>while</KEYWORD1>
 
@@ -176,5 +206,6 @@
 			<LITERAL2>EQUAL</LITERAL2>
 			<LITERAL2>GREATER</LITERAL2>
 		</KEYWORDS>
+    
 	</RULES>
 </MODE>
